[metadata]
name = bashthebug-consensus-dataset
version = file: VERSION
description = The BashTheBug dataset for finding the optimal consensus method
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fowler-lab/bashthebug-consensus-dataset
keywords = citizen science, zooniverse, TB
license = MIT
classifiers = Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    numpy >= 1.21.2
    pandas >= 1.3.3
    matplotlib >= 3.4.1
    pandas
    scipy >= 1.7.0
python_requires = >=3.7    
package_dir = 

